SERVER-25314 lock sharded database while dropping